[package]
name = "custom_callback"
version = "0.22.0-alpha.1+dev"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "custom_callback_viewer"
path = "src/viewer.rs"

[[bin]]
name = "custom_callback_app"
path = "src/app.rs"

[features]
default = []

# Turn on if you want to share analytics with Rerun (e.g. callstacks on crashes).
# analytics = ["rerun/analytics"]

[dependencies]
re_crash_handler = { path = "../../../crates/utils/re_crash_handler" }
re_error = { path = "../../../crates/utils/re_error" }
rerun = { path = "../../../crates/top/rerun", features = [
  "native_viewer",
  "run",
  "data_loaders",
] }

bincode = "1.3.3"
mimalloc = "0.1.43"
parking_lot = "0.12"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wayland",
  "x11",
] }
tokio = { version = "1.14.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "net",
  "io-util",
  "sync",
  "signal",
] }
clap = { version = "4.0", features = ["derive"] }
